--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if logged_in? %>
+  <%= link_to "Log out", logout_path, method: "delete" %>
+<% else %>
+  <%= link_to "Log in", login_path %>
+<% end %>
 <%= yield %>
 
 </body>
